<resources>
    <string name="app_name">ProyectoFinalRamonSolerHernan</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="acceder">Acceder</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="add">Add</string>
    <string name="noticias">NOTICIAS</string>
    <string name="imgDesc_back">imagen de volver atras</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="imagen_noticia">imagen noticia</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="leer_comentarios">Leer Comentarios</string>
    <string name="comentarios">COMENTARIOS</string>
    <string name="todas">TODAS</string>
    <string name="mias">MIAS</string>
    <string name="titulo">Titulo</string>
    <string name="contenido">Contenido</string>
    <string name="cargar_imagen">CARGAR IMAGEN</string>
</resources>
