<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_main"
    tools:context="com.example.ramon.proyectofinalramonsolerhernan.MostrarNoticiaActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarNoticiasMostrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorActionBar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/imgDesc_back"
                app:srcCompat="@android:drawable/ic_media_previous" />

            <TextView
                android:id="@+id/txtTituloListaNoticias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:text="@string/noticias"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="30sp" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txtMostrarTituloNoticia"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarNoticiasMostrar" />

    <TextView
        android:id="@+id/txtMostrarContenidoNoticias"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/imgMostrarNoticia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMostrarTituloNoticia" />

    <ImageView
        android:id="@+id/imgMostrarNoticia"
        android:layout_width="183dp"
        android:layout_height="159dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/imagen_noticia"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/btnLeerComentarios"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/btnLeerComentarios"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:background="@color/colorAccentBlue"
        android:text="@string/leer_comentarios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
